--- a/index.html
+++ b/index.html
@@ -8,7 +8,53 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div>
+
+        <div class="container-sm">
+            <div class="row flex justify-content-center">
+                <div class="col-12 col-md-8">
+                    <div class="card text-center">
+                        <div class="card-header">
+                          <h1>BOOLEAN TRAIN TICKET</h1>
+                        </div>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-6 mb-3">
+                                  <div class="form-floating">
+                                    <input type="name" class="form-control" id="name" placeholder="Name">
+                                    <label for="floatingInputGrid">Nome</label>
+                                  </div>
+                                </div>
+                                <div class="col-6 mb-3">
+                                    <div class="form-floating">
+                                      <input type="surname" class="form-control" id="surname" placeholder="surname">
+                                      <label for="floatingInputGrid">Cognome</label>
+                                    </div>
+                                </div>
+                                <div class="col-12 mb-3">
+                                    <div class="form-floating">
+                                      <input type="text" class="form-control" id="km" placeholder="km">
+                                      <label for="floatingInputGrid">Km da percorrere</label>
+                                    </div>
+                                </div>
+                                <div class="col-12 mb-3">
+                                    <select id="anni" class="form-select form-select-lg mb-3">
+                                        <option selected>Seleziona fascia d'età</option>
+                                        <option value="1">Under 18</option>
+                                        <option value="2">18+</option>
+                                        <option value="3">Over 65</option>
+                                    </select>
+                                </div>
+                                <div class="col-12">
+                                    <button class="btn btn-success"> Calcola il prezzo del tuo biglietto</button>
+                                </div>
+                            </div>
+                        </div>
+                      </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script text="text/javascript" src="./js/script.js"></script>
 </body>
