--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Document</title>
 </head>
-<body>
-    <div>
+<body class="bg-primary">
+    <div class="py-5">
 
         <div class="container-sm">
             <div class="row flex justify-content-center">
                 <div class="col-12 col-md-8">
                     <div class="card text-center">
-                        <div class="card-header">
-                          <h1>BOOLEAN TRAIN TICKET</h1>
+                        <div class="card-header py-3 bg-danger">
+                          <h1><i class="fa-solid fa-ticket fa-2xl"></i> BOOLEAN TRAIN TICKET <i class="fa-solid fa-ticket fa-2xl"></i></h1>
                         </div>
-                        <div class="card-body">
+                        <div class="card-body bg-warning">
                             <div class="row">
                                 <div class="col-6 mb-3">
                                   <div class="form-floating">
@@ -47,6 +48,15 @@
                                 </div>
                                 <div class="col-12">
                                     <button class="btn btn-success"> Calcola il prezzo del tuo biglietto</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-footer bg-warning-subtle">
+                            <div class="col-12">
+                                <div class="content my-4">
+                                    <h2 id="welcome"></h2>
+                                    <p id="discount"></p>
+                                    <h2 id="ticket"></h2>
                                 </div>
                             </div>
                         </div>
